logo, título, header, footer, fuentes, acerca, correcciones

--- a/acerca.html
+++ b/acerca.html
@@ -75,39 +75,29 @@
             </div>
         </nav>
     </header>
-
     <main>
-        <div id="carrusel" class="carousel slide">
-            <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carrusel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carrusel" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carrusel" data-bs-slide-to="2" aria-label="Slide 3"></button>
-            </div>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="img/imagen1.jpg" class="d-block w-100" alt="Fuji">
-                </div>
-                <div class="carousel-item">
-                    <img src="img/imagen2.webp" class="d-block w-100" alt="Kyoto">
-                </div>
-                <div class="carousel-item">
-                    <img src="img/imagen3.jpg" class="d-block w-100" alt="figuras">
-                </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carrusel" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carrusel" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
+        <div class="text-center p-2">
+            <p>La página "Viajes Turísticos Japón" es exclusivamente una página de práctica para aprender y mejorar
+                habilidades en el uso de lenguajes de marcas como HTML5, CSS y Bootstrap. Su principal objetivo es
+                servir como una muestra de los conceptos adquiridos durante el proceso de aprendizaje.</p>
+
+            <p>Es importante aclarar que ninguna de las secciones presentes en la página tiene una función real o está
+                destinada a realizar tareas operativas como la compra de boletos o la reserva de viajes. Todas las
+                funcionalidades incluidas son simuladas y no tienen ninguna utilidad más allá de servir como ejemplos
+                técnicos.</p>
+
+            <p>Esta página no está vinculada a ningún servicio de viajes ni a una agencia real, por lo que cualquier
+                referencia a servicios turísticos debe ser interpretada como parte del ejercicio de desarrollo web y no
+                como una oferta auténtica.</p>
+
         </div>
+
     </main>
 
     <footer class="text-center">
-        <p><span class="d-none d-lg-inline">Teléfono: <a href="tel:123456789">123-456-789</a> |</span> <span class="d-none d-md-inline">Correo: <a href="mailto:info@dominio.com">info@nihongo.com</a></span></p>
-        <p>&copy2024 Dominio. Todos los derechos reservados.</p>
+        <p><span class="d-none d-lg-inline">Teléfono: <a href="tel:123456789">123-456-789</a> |</span> <span
+                class="d-none d-md-inline">Correo: <a href="mailto:info@dominio.com">info@nihongo.com</a></span></p>
+        <p>&copy2024 Viajes Turísticos Nihon-GO. Todos los derechos reservados.</p>
     </footer>
 
 </div>
