--- a/contacto.html
+++ b/contacto.html
@@ -2,9 +2,13 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title></title>
-    <meta name="description" content="descripción">
-    <meta name="keywords" content="keywords">
+    <title>Viajes Nihon-GO</title>
+    <meta name="description" content="Viajes turísticos Nihongo, conoce Japón en español">
+    <meta name="keywords" content="Japón, Nihon, viajes, turismo, español, japonés, vacaciones, vuelos, blog">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap');
+    </style>
+    <link rel="icon" href="img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/bootstrap-icons.min.css">
     <link rel="stylesheet" href="css/miestilo.css">
@@ -13,45 +17,54 @@
 <body>
 <div class="container-fluid p-0">
     <header class="pe-2">
-        <nav class="navbar navbar-expand-lg navbar-dark ">
-            <div class="justify-content-start"><a class="navbar-brand justifycontent-start" href="main.html"><img src="img/logo.png" alt="logo"></a></div>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Activar navegacion">
+        <nav id="navegacion" class="navbar navbar-expand-lg navbar-dark ">
+            <span id="logo" class="justify-content-start"><a class="navbar-brand justifycontent-start" href="main.html"><img
+                    src="img/logo.png" alt="logo"></a></span>
+            <span id="titulo"><h1>Nihon-GO</h1></span>
+
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Activar navegacion">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item active">
+                    <li id="inicio" class="nav-item header active">
                         <a class="nav-link" href="main.html" target="_blank">Inicio</a>
                     </li>
-                    <li class="nav-item">
+                    <li id="reservas" class="nav-item header">
                         <a class="nav-link" href="reservas.html" target="_blank">Reservas</a>
                     </li>
-                    <li class="nav-item">
+                    <li id="galeria" class="nav-item header">
                         <a class="nav-link" href="galeria.html" target="_blank">Galeria</a>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <li id="menu-desplegable" class="nav-item dropdown header">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                           aria-expanded="false">
                             Japón
                         </a>
                         <ul class="dropdown-menu desplegable">
-                            <li><a class="dropdown-item" href="lugares.html">Lugares</a></li>
-                            <li><a class="dropdown-item" href="que-ver.html">¿Qué ver?</a></li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            <li id="lugares"><a class="dropdown-item" href="lugares.html">Lugares</a></li>
+                            <li id="que-hacer"><a class="dropdown-item" href="que-hacer.html">¿Qué hacer?</a></li>
+                            <li id="que-ver"><a class="dropdown-item" href="que-ver.html">¿Qué ver?</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item">
+                    <li id="tienda" class="nav-item header">
                         <a class="nav-link" href="tienda.html" target="_blank">Tienda</a>
                     </li>
-                    <li class="nav-item">
+                    <li id="blog" class="nav-item header">
                         <a class="nav-link" href="blog.html" target="_blank">Blog</a>
                     </li>
-                    <li class="nav-item">
+                    <li id="contacto" class="nav-item header">
                         <a class="nav-link" href="contacto.html" target="_blank">Contacto</a>
+                    </li>
+                    <li class="nav-item header">
+                        <a class="nav-link" href="acerca.html" target="_blank">Acerca</a>
                     </li>
                     <li class="nav-item">
                         <form id="buscar" class="form-inline" action="/buscar" method="get">
                             <div class="input-group">
-                                <input class="form-control" type="search" placeholder="Buscar" aria-label="Buscar" name="query">
+                                <input class="form-control" type="search" placeholder="Buscar" aria-label="Buscar"
+                                       name="query">
                                 <div class="input-group-append">
                                     <button class="btn btn-outline-success" type="submit">Buscar</button>
                                 </div>
@@ -61,19 +74,12 @@
                 </ul>
             </div>
         </nav>
-        <div class="row">
-            <div id="titulo" class="text-start col-12 col-lg-6 ps-5"><h3>Titulo</h3></div>
-            <div id="subtitulo" class="text-end col-12 col-lg-6">
-                <p id="tag1" class="d-none d-md-block d-lg-none text-end">Subtítulo</p>
-                <p id="tag2" class="d-none d-lg-block text-end">Tag</p>
-            </div>
-        </div>
     </header>
     <main>
-        <div class="text-center mt-5">
+        <div class="text-center p-2">
             <h2>Formulario de contacto</h2>
         </div>
-        <form action="/action_page.php" class="p-5">
+        <form id="formulario-contacto" action="/action_page.php" class="p-5" method="post">
             <div class="row">
                 <div class="row">
                     <div class="col-xs-12 col-md-4">
@@ -82,7 +88,7 @@
                             <div class="input-group-prepend">
                                 <span class="input-group-text"><i class="bi bi-person"></i></span>
                             </div>
-                            <input type="text" id="nombre" class="form-control" name="nombre">
+                            <input type="text" id="nombre" class="form-control" name="nombre" required>
                         </div>
                     </div>
                     <div class="col-xs-12 col-md-4">
@@ -100,7 +106,7 @@
                             <div class="input-group-prepend">
                                 <span class="input-group-text"><i class="bi bi-envelope"></i></span>
                             </div>
-                            <input type="email" id="email" class="form-control" name="email">
+                            <input type="email" id="email" class="form-control" name="email" required>
                         </div>
                     </div>
                 </div>
@@ -110,7 +116,7 @@
                 </div>
                 <div class="col-12 mt-2">
                     <label for="mensaje" class="form-label">Mensaje:</label>
-                    <textarea class="form-control" rows="5" id="mensaje" name="mensaje"></textarea>
+                    <textarea class="form-control" rows="5" id="mensaje" name="mensaje" required></textarea>
                 </div>
                 <div class="mt-2 d-flex justify-content-center">
                     <button type="submit" class="btn btn-success">Enviar</button>
@@ -122,9 +128,8 @@
 
     <footer class="text-center">
         <p><span class="d-none d-lg-inline">Teléfono: <a href="tel:123456789">123-456-789</a> |</span> <span
-                class="d-none d-md-inline">Correo: <a href="mailto:info@dominio.com">info@dominio.com</a></span></p>
-        <p class="d-none d-lg-block">Dirección</p>
-        <p>&copy2024 Dominio. Todos los derechos reservados.</p>
+                class="d-none d-md-inline">Correo: <a href="mailto:info@dominio.com">info@nihongo.com</a></span></p>
+        <p>&copy2024 Viajes Turísticos Nihon-GO. Todos los derechos reservados.</p>
     </footer>
 
 </div>
