--- a/blog.html
+++ b/blog.html
@@ -18,7 +18,7 @@
 <div class="container-fluid p-0">
     <header class="pe-2">
         <nav id="navegacion" class="navbar navbar-expand-lg navbar-dark ">
-            <span id="logo" class="justify-content-start"><a class="navbar-brand justifycontent-start" href="main.html"><img
+            <span id="logo" class="justify-content-start"><a class="navbar-brand justifycontent-start" href="inicio.html"><img
                     src="img/logo.png" alt="logo"></a></span>
             <span id="titulo"><h1>Nihon-GO</h1></span>
 
@@ -29,7 +29,7 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li id="inicio" class="nav-item header active">
-                        <a class="nav-link" href="main.html" target="_blank">Inicio</a>
+                        <a class="nav-link" href="inicio.html" target="_blank">Inicio</a>
                     </li>
                     <li id="reservas" class="nav-item header">
                         <a class="nav-link" href="reservas.html" target="_blank">Reservas</a>
