--- a/tienda.html
+++ b/tienda.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>Viajes Nihon-GO</title>
     <meta name="description" content="Viajes turísticos Nihongo, conoce Japón en español">
-    <meta name="keywords" content="Japón, Nihon, viajes, turismo, español, japonés, vacaciones, vuelos, blog">
+    <meta name="keywords"
+          content="Japón, Nihon, viajes, turismo, español, japonés, vacaciones, vuelos, blog, imágenes, artículos">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap');
     </style>
@@ -18,7 +19,8 @@
 <div class="container-fluid p-0">
     <header class="pe-2">
         <nav id="navegacion" class="navbar navbar-expand-lg navbar-dark ">
-            <span id="logo" class="justify-content-start"><a class="navbar-brand justifycontent-start" href="inicio.html"><img
+            <span id="logo" class="justify-content-start"><a class="navbar-brand justifycontent-start"
+                                                             href="inicio.html"><img
                     src="img/logo.png" alt="logo"></a></span>
             <span id="titulo"><h1>Nihon-GO</h1></span>
 
@@ -210,8 +212,8 @@
                         <img class="card-img-top" src="img/amigurumi12.jpg" alt="Iron Man">
                         <div class="card-body">
                             <div class="row">
-                            <h5 class="card-title">Iron Man</h5>
-                            <p class="card-text precio">27,90 &euro;</p>
+                                <h5 class="card-title">Iron Man</h5>
+                                <p class="card-text precio">27,90 &euro;</p>
                             </div>
                             <button type="button" class="btn btn-success">Comprar</button>
                         </div>
