--- a/inicio.html
+++ b/inicio.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>Viajes Nihon-GO</title>
     <meta name="description" content="Viajes turísticos Nihongo, conoce Japón en español">
-    <meta name="keywords" content="Japón, Nihon, viajes, turismo, español, japonés, vacaciones, vuelos, blog">
+    <meta name="keywords"
+          content="Japón, Nihon, viajes, turismo, español, japonés, vacaciones, vuelos, blog, imágenes, artículos">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap');
     </style>
@@ -18,7 +19,8 @@
 <div class="container-fluid p-0">
     <header class="pe-2">
         <nav id="navegacion" class="navbar navbar-expand-lg navbar-dark ">
-            <span id="logo" class="justify-content-start"><a class="navbar-brand justifycontent-start" href="inicio.html"><img
+            <span id="logo" class="justify-content-start"><a class="navbar-brand justifycontent-start"
+                                                             href="inicio.html"><img
                     src="img/logo.png" alt="logo"></a></span>
             <span id="titulo"><h1>Nihon-GO</h1></span>
 
@@ -79,7 +81,8 @@
     <main>
         <div id="carrusel" class="carousel slide">
             <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carrusel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carrusel" data-bs-slide-to="0" class="active" aria-current="true"
+                        aria-label="Slide 1"></button>
                 <button type="button" data-bs-target="#carrusel" data-bs-slide-to="1" aria-label="Slide 2"></button>
                 <button type="button" data-bs-target="#carrusel" data-bs-slide-to="2" aria-label="Slide 3"></button>
             </div>
@@ -106,7 +109,8 @@
     </main>
 
     <footer class="text-center">
-        <p><span class="d-none d-lg-inline">Teléfono: <a href="tel:123456789">123-456-789</a> |</span> <span class="d-none d-md-inline">Correo: <a href="mailto:info@dominio.com">info@nihongo.com</a></span></p>
+        <p><span class="d-none d-lg-inline">Teléfono: <a href="tel:123456789">123-456-789</a> |</span> <span
+                class="d-none d-md-inline">Correo: <a href="mailto:info@dominio.com">info@nihongo.com</a></span></p>
         <p>&copy2024 Dominio. Todos los derechos reservados.</p>
     </footer>
 
