--- a/lugares.html
+++ b/lugares.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>Viajes Nihon-GO</title>
     <meta name="description" content="Viajes turísticos Nihongo, conoce Japón en español">
-    <meta name="keywords" content="Japón, Nihon, viajes, turismo, español, japonés, vacaciones, vuelos, blog">
+    <meta name="keywords"
+          content="Japón, Nihon, viajes, turismo, español, japonés, vacaciones, vuelos, blog, imágenes, artículos">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap');
     </style>
@@ -18,7 +19,8 @@
 <div class="container-fluid p-0">
     <header class="pe-2">
         <nav id="navegacion" class="navbar navbar-expand-lg navbar-dark ">
-            <span id="logo" class="justify-content-start"><a class="navbar-brand justifycontent-start" href="inicio.html"><img
+            <span id="logo" class="justify-content-start"><a class="navbar-brand justifycontent-start"
+                                                             href="inicio.html"><img
                     src="img/logo.png" alt="logo"></a></span>
             <span id="titulo"><h1>Nihon-GO</h1></span>
 
