footer en main.html

--- a/inicio.html
+++ b/inicio.html
@@ -111,9 +111,8 @@
     <footer class="text-center">
         <p><span class="d-none d-lg-inline">Teléfono: <a href="tel:123456789">123-456-789</a> |</span> <span
                 class="d-none d-md-inline">Correo: <a href="mailto:info@dominio.com">info@nihongo.com</a></span></p>
-        <p>&copy2024 Dominio. Todos los derechos reservados.</p>
+        <p>&copy2024 Viajes Turísticos Nihon-GO. Todos los derechos reservados.</p>
     </footer>
-
 </div>
 <script src="js/bootstrap.bundle.min.js"></script>
 </body>
